--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div id="dropdown">
             <label for="cities">Cities</label>
             <select name="cities" id="cities">
-                <option value="Budapest">Budapest</option>
                 <option value="Berlin">Berlin</option>
+                <option value="Budapest">Budapest</option>
                 <option value="London">London</option>
                 <option value="Paris">Paris</option>
                 <option value="Prague">Prague</option>
@@ -34,7 +34,7 @@
         </div>
     </div>
     <div class="main">
-        <div id="city">city</div>
+        <div id="city"></div>
         <div id="tempature">t</div>
         <div id="skyCondition">
             <img src="" alt="" id="skyImg">
