--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p id="country"></p>
         </div>
         <div id="skyCondition" class="b">
-            <img src="" alt="" id="skyImg" width="100px" height="100px">
+            <img id="skyImg">
             <p id="skyCond"></p>
         </div>
         <div id="datas1" class="c">
