--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
             <input type="text" placeholder="City">
         </div> -->
     </div>
-    <div hidden id="spinner"></div>
+    <div hidden class="loading" id="loading">
+        <div class="loading-text">
+          <span class="loading-text-words">L</span>
+          <span class="loading-text-words">O</span>
+          <span class="loading-text-words">A</span>
+          <span class="loading-text-words">D</span>
+          <span class="loading-text-words">I</span>
+          <span class="loading-text-words">N</span>
+          <span class="loading-text-words">G</span>
+        </div>
+      </div>
     <div id="main">
         <div id="gridCity" class="a">
             <p id="city"></p>
