--- a/index.html
+++ b/index.html
@@ -35,7 +35,29 @@
           <span class="loading-text-words">G</span>
         </div>
       </div>
-    <div id="main">
+    <div id="draggable" class="no-select">
+        <div id="main">
+            <div id="gridCity" class="a">
+                <p id="city"></p>
+                <p id="country"></p>
+            </div>
+            <div id="skyCondition" class="b">
+                <img id="skyImg">
+                <p id="skyCond"></p>
+            </div>
+            <div id="datas1" class="c">
+                <p id="tempature"></p>
+                <p id="feelslike"></p>
+            </div>
+            <div id="datas2" class="d">
+                <p id="humidity"></p>
+                <p id="wind"></p>
+                <p id="cloud"></p>
+                <p id="pressure"></p>
+            </div>
+        </div>
+    </div>  
+    <!-- <div id="main">
         <div id="gridCity" class="a">
             <p id="city"></p>
             <p id="country"></p>
@@ -54,7 +76,7 @@
             <p id="cloud"></p>
             <p id="pressure"></p>
         </div>
-    </div>
+    </div> -->
     <script src="script.js"></script>
 </body>
 </html>
